--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    Hello
+    <!-- Temporary Form for validating APIs -->
+    <form action="/form" method="post">
+        <label for="name">Name:</label>
+        <input id="name" name="name" type="text" />
+        <label for="email">Email:</label>
+        <input id="email" name="email" type="email" />
+        <input type="submit"/>
+    </form>
 </body>
 </html>
